--- a/.github/workflows/test-python.yml
+++ b/.github/workflows/test-python.yml
@@ -33,13 +33,13 @@ jobs:
             run: |
               pwd
               mkdir -p ~/.ssh
-              echo "${{ secrets.EC2_SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+              echo "${{ secrets.EC2_SSH_KEY }}" > ~/.ssh/id_rsa
               chmod 600 ~/.ssh/id_rsa
               ssh-keyscan -H ${{ secrets.EC2_PUBLIC_IP }} >> ~/.ssh/known_hosts
 
         -   name: Run SSH commands on EC2
             run: |
               ssh ec2-user@${{ secrets.EC2_PUBLIC_IP }} << 'EOF'
-                echo "Hello johnreygoh"
+                echo "Hello April"
                 uname -a
               EOF
